# momon

./: .pre-commit-config.yaml  docker-compose.yml
.github/workflows/: lint-backend.yml  test-backend.yml
backend/: .gitignore  .gockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/scripts/: lint.sh  prestart.sh  start-dev.sh  tests-start.sh
backend/src/: backend_pre_start.py  config.py  constants.py  db.py  exceptions.py  initial_data.py  main.py  models.py  router.py  tests_pre_start.py  utils.py
backend/src/app/: router.py
backend/src/auth/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 7fcb95e25f3b_auth.py  9548cf1ea456_add_user_model.py  a5aab7a5cf0e_auth_1.py  fd6545dc025d_add_user_model.py
backend/src/users/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api_tests/: users_test.py
infra/: nginx.conf
