[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic<2.0.0,>=1.15.1",
    "fastapi[standard]<1.0.0,>=0.115.12",
    "psycopg[binary]<4.0.0,>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "ruff>=0.11.2",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
