[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic<2.0.0,>=1.15.1",
    "asyncpg>=0.30.0",
    "emails>=0.6",
    "fastapi[standard]<1.0.0,>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=0.26.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src"]


[tool.ruff]
line-length = 120
extend-exclude = [
    "migrations",
]
fix = true
force-exclude = true
namespace-packages = ["backend"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
exclude = [
    "*.md",
    "*.ini",
    "*.toml",
    "*.lock",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.mypy]
strict = true
